implement homepage, logout and added the app logo

--- a/bb-frontend/src/app/landing-page/landing-page.component.html
+++ b/bb-frontend/src/app/landing-page/landing-page.component.html
@@ -1,8 +1,7 @@
 <div class="header">
   <div class="logo">
     <section>
-      <h1>BudgetBuddy</h1>
-      <p>Your Finance Buddy</p>
+      <img src="./assets/images/bb.png" style="height: 450px" />
     </section>
   </div>
   <div class="auth">
