--- a/bb-frontend/src/app/budget/budget.component.html
+++ b/bb-frontend/src/app/budget/budget.component.html
@@ -1,1 +1,15 @@
-<p>budget works!</p>
+<div class="budget-parent">
+  <div class="budget-button">
+    <button mat-button (click)="openCreateBudgetDialog()">Create Budget</button>
+  </div>
+  <div class="card-container">
+    <mat-card class="custom-card" *ngFor="let budget of budgets">
+      <mat-card-content>
+        <h3>{{ budget.description }}</h3>
+        <p>
+          Amount: {{ budget.amount | currency : "PHP" : "symbol" : "1.2-2" }}
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
