--- a/bb-frontend/src/app/home-container/home-container.component.html
+++ b/bb-frontend/src/app/home-container/home-container.component.html
@@ -3,6 +3,9 @@
     <app-home-page class="flex-item"></app-home-page>
   </div>
   <div class="router-outlet">
+    <div class="header">
+      <app-user></app-user>
+    </div>
     <router-outlet class="flex-item"></router-outlet>
   </div>
 </div>
