--- a/bb-frontend/src/app/home-container/home-page/dashboard/dashboard.component.css
+++ b/bb-frontend/src/app/home-container/home-page/dashboard/dashboard.component.css
@@ -1,24 +1,99 @@
-.dashboard-header {
-  width: auto; /* Allow it to take the necessary width */
-  display: flex;
-  align-items: center; /* Center vertically */
-}
-.dashboard-header app-user {
-  margin-left: auto; /* Push app-user to the right by using auto margin on the left side */
-}
-
 .dashboard-content {
-  margin-top: 50px;
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(2, 1fr); /* Two columns */
-  justify-items: center; /* Center horizontally within each cell */
-  align-items: center; /* Center vertically within each cell */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  font-family: Arial, sans-serif;
 }
 
-.dashboard-content div {
-  width: 500px;
-  height: 250px;
-  background-color: #f0f0f0;
-  border-radius: 25px;
+.category {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border: 1px solid #eee;
+  width: 300px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out;
+  cursor: pointer;
+  animation: scaleUp 0.3s ease-in-out;
+}
+
+.category:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes scaleUp {
+  from {
+    transform: scale(0.8);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+.category h2 {
+  font-size: 1.2rem;
+  margin: 0;
+  color: #333;
+}
+
+.expenses-content {
+  margin-bottom: 1rem;
+}
+
+.expenses-content p {
+  font-size: 1rem;
+  color: #555;
+  background-color: #e1f3f5;
+  padding: 0.5rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, color 0.3s ease;
+  animation: fadeIn 0.5s ease;
+}
+
+.expenses-content p:hover {
+  background-color: #52b4c8;
+  color: #fff;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.pie-chart {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+/* Styling for bill items */
+.bill-item {
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Styling for checkboxes */
+.bill-item input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+/* Styling for due bills */
+.bill-item.due {
+  color: #d9534f; /* Red color for due bills */
+  font-weight: bold;
+}
+
+/* Styling for not due bills */
+.bill-item.not-due {
+  color: #5bc0de; /* Blue color for not due bills */
+  font-weight: bold;
 }
