--- a/bb-frontend/src/app/home-container/home-page/budget/budget.component.html
+++ b/bb-frontend/src/app/home-container/home-page/budget/budget.component.html
@@ -1,7 +1,7 @@
+<div class="budget-button" style="text-align: right">
+  <button mat-button (click)="openCreateBudgetDialog()">Create Budget</button>
+</div>
 <div class="budget-parent">
-  <div class="budget-button">
-    <button mat-button (click)="openCreateBudgetDialog()">Create Budget</button>
-  </div>
   <div class="card-container">
     <mat-card class="custom-card" *ngFor="let budget of budgets">
       <mat-card-content>
