--- a/bb-frontend/src/app/home-container/home-page/expense/create-expense/create-expense.component.html
+++ b/bb-frontend/src/app/home-container/home-page/expense/create-expense/create-expense.component.html
@@ -7,7 +7,12 @@
     </div>
     <div class="form-group">
       <label for="amount">Amount</label>
-      <input type="number" id="amount" formControlName="amount" />
+      <input
+        type="number"
+        id="amount"
+        formControlName="amount"
+        placeholder="₱ 0 .00"
+      />
     </div>
     <div class="form-group">
       <label for="file">File Attachment</label>
