--- a/bb-frontend/src/app/home-container/home-page/expense/create-expense/create-expense.component.html
+++ b/bb-frontend/src/app/home-container/home-page/expense/create-expense/create-expense.component.html
@@ -29,7 +29,13 @@
       </mat-form-field>
     </div>
     <div class="form-group">
-      <button type="submit" [disabled]="!expenseForm.valid">Submit</button>
+      <button
+        class="create-expense"
+        type="submit"
+        [disabled]="!expenseForm.valid"
+      >
+        Submit
+      </button>
     </div>
   </form>
 </div>
