--- a/bb-frontend/src/app/home-container/home-page/home-page.component.html
+++ b/bb-frontend/src/app/home-container/home-page/home-page.component.html
@@ -48,10 +48,7 @@
         <!-- Savings Plan Link with MatIcon -->
         <div>
           <li>
-            <a
-              [routerLink]="['/home/savings-plan']"
-              routerLinkActive="active-link"
-            >
+            <a [routerLink]="['/home/savings']" routerLinkActive="active-link">
               <mat-icon>account_balance</mat-icon>
               Savings Plan
             </a>
