--- a/bb-frontend/src/app/home-container/home-page/income/income.component.html
+++ b/bb-frontend/src/app/home-container/home-page/income/income.component.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 <div class="total-income" style="text-align: center">
-  <p>
+  <p style="color: red; font-family: Arial, Helvetica, sans-serif">
     Total Income: {{ totalIncomes | currency : "PHP" : "symbol" : "1.2-2" }}
   </p>
 </div>
