--- a/bb-frontend/src/app/home-container/home-page/budget/budget.component.html
+++ b/bb-frontend/src/app/home-container/home-page/budget/budget.component.html
@@ -10,6 +10,12 @@
         <p>
           Amount: {{ budget.amount | currency : "PHP" : "symbol" : "1.2-2" }}
         </p>
+        <p
+          style="text-align: center; color: red"
+          *ngIf="budget.totalExpenses > budget.amount"
+        >
+          {{ message }}
+        </p>
       </mat-card-content>
     </mat-card>
   </div>
