--- a/bb-frontend/src/app/home-container/home-page/expense/create-expense/create-expense.component.html
+++ b/bb-frontend/src/app/home-container/home-page/expense/create-expense/create-expense.component.html
@@ -16,7 +16,9 @@
     </div>
     <div class="form-group">
       <label for="file">File Attachment</label>
-      <app-file-upload></app-file-upload>
+      <app-file-upload
+        (fileUploaded)="onFileUploaded($event)"
+      ></app-file-upload>
     </div>
     <div class="form-group">
       <mat-label>Budget</mat-label>
