--- a/bb-frontend/src/app/home-container/home-page/expense/expense.component.html
+++ b/bb-frontend/src/app/home-container/home-page/expense/expense.component.html
@@ -42,6 +42,12 @@
             >
               <mat-icon>delete</mat-icon>
             </button>
+            <a
+              *ngIf="expense.attachment"
+              target="_blank"
+              [href]="expense.attachment"
+              ><mat-icon>download</mat-icon></a
+            >
           </div>
         </div>
 
